# supertoml

./: .gitignore  .pre-commit-config.yaml  BUILDING.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  REFERENCE.md  build.rs  mise.toml  test.toml
.cursor/commands/: commit.md  pr.md  release.md
.cursor/rules/: hints.mdc
.github/workflows/: build-and-test.yml  pre-merge-checks.yml  release.yml
src/: error.rs  formatter.rs  lib.rs  loader.rs  main.rs  resolver.rs  utils.rs
src/plugins/: after.rs  before.rs  import.rs  mod.rs  noop.rs  reference.rs  templating.rs
tests/: cli_tests.rs  integration_tests.rs  readme_validation.rs  toml_tests.rs
tests/cli_test_cases/import_from_child/: config.toml  run.sh  test.toml
tests/cli_test_cases/import_nested_child/: config.toml  data.toml  run.sh
tests/cli_test_cases/import_sibling/: run.sh
tests/cli_test_cases/import_with_dot_slash/: config.toml  run.sh  source.toml
tests/cli_test_cases/version/: run.sh
tests/test_cases/: after_plugin.toml  before_double_reference.toml  before_plugin.toml  circular_reference.toml  mixed_types.toml  output_formats.toml  recursive_plugin.toml  recursive_templating.toml  reference_plugin.toml  templating.toml
tests/toml_test_cases/: after_double_reference.toml  basic_strings.toml  before_double_reference.toml  circular_reference.toml  env_function_errors.toml  env_functions.toml  import_plugin.toml  meta_values.toml  mixed_types.toml  noop_plugin.toml  recursive_plugin.toml  reference_plugin.toml  templating.toml  templating_with_reference.toml
(+2 files in other folders)
