[package]
name = "supertoml"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"

[build-dependencies]
glob = "0.3"

[dev-dependencies]
glob = "0.3"

[[bin]]
name = "supertoml"
path = "src/main.rs"

[lib]
name = "supertoml"
path = "src/lib.rs"
