[package]
name = "supertoml"
version = "0.6.0"
edition = "2021"
authors = ["Sean O'Dell <sean@celsoft.com>"]
license = "MIT"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
minijinja = "1.0"
strum = { version = "0.26", features = ["derive"] }

[build-dependencies]
glob = "0.3"

[dev-dependencies]
glob = "0.3"
regex = "1.0"
tempfile = "3.0"

[[bin]]
name = "supertoml"
path = "src/main.rs"

[lib]
name = "supertoml"
path = "src/lib.rs"
